# qt6-modules-template-project

./: CMakeLists.txt  README.md
qt/qml/: CMakeLists.txt  main.cpp
qt/qml/main/: ApplicationContent.qml  Main.qml
